# newsletter_subscriber

./: Cargo.toml
src/: configuration.rs  email_client.rs  lib.rs  main.rs
src/configuration/: base.yaml
src/domain/: mod.rs  subscriber_email.rs
