[package]
name = "newsletter_subscriber"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "newsletter_subscriber"
path = "src/main.rs"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = "0.20.0"

[dev-dependencies]
reqwest = "0.12.5"
