[package]
name = "newsletter_subscriber"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "newsletter_subscriber"
path = "src/main.rs"

[dependencies]
axum = "0.7.5"
config = { version = "0.15.18", default-features = false, features = ["yaml"] }
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls", "cookies"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", default-features = false, features = ["postgres"] }
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
unicode-segmentation = "1.12.0"
validator = "0.20.0"

[dev-dependencies]
claims = "0.8.0"
fake = "4.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
reqwest = "0.12.5"
wiremock = "0.6.5"
